Fix header hidden by map; cleanup

--- a/index.css
+++ b/index.css
@@ -1,8 +1,18 @@
 body {
+    height: 100%;
     margin-left: 10%;
-    margin-right: 10%
+    margin-right: 10%;
+}
+
+#world-map-wrapper {
+    height: 80vh;
+}
+
+#world-map {
+    width: 100%;
+    height: 100%;
 }
 
 h1 {
-    font-family: 'Times New Roman', Times, serif
+    font-family: 'Times New Roman', Times, serif;
 }
